[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/kirifont/Kirifont.tres" type="DynamicFont" id=2]

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LevelList" type="GridContainer" parent="."]
margin_left = 136.0
margin_top = 96.0
margin_right = 888.0
margin_bottom = 456.0
grow_horizontal = 2
grow_vertical = 2
columns = 8

[node name="CancelButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -88.0
margin_right = 136.0
margin_bottom = -32.0
custom_fonts/font = ExtResource( 2 )
text = "Cancel"

[connection signal="button_down" from="CancelButton" to="." method="hide_dialog"]
